--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,52 +22,7 @@ jobs:
           languages: "YAML,JSON"
 
       - name: Lint Dockerfile
-        uses: hadolint/hadolint-action@v3.1.0  # Użycie wersji v3.1.0
+        uses: hadolint/hadolint-action@v3.1.0
         with:
-          dockerfile: Dockerfile  # Ścieżka do pliku Dockerfile
-          no-color: false  # Opcjonalne: kolorowy output
-          failure-threshold: warning  # Progi na poziomie ostrzeżeń
-          
-  build-and-test:
-    name: Build and Test with Docker Compose
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Build Docker Compose services
-        run: docker-compose build
-
-      - name: Start Docker Compose services
-        run: docker-compose up -d
-
-      - name: Test Keycloak service
-        run: |
-          sleep 20 # Wait for Keycloak to start
-          curl -f http://localhost:8080 || exit 1
-
-      - name: Stop and clean up Docker Compose
-        run: docker-compose down
-
-  security-scan:
-    name: Security Scan with Trivy
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Build Docker Compose services
-        run: docker-compose build
-
-      - name: Scan all images in Docker Compose
-        run: |
-          services=$(docker-compose config | grep 'image:' | awk '{print $2}')
-          for image in $services; do
-            trivy image $image || exit 1
-          done
+          dockerfile: Dockerfile
+          failure-threshold: warning
