--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,19 +10,11 @@ on:
 
 jobs:
   lint:
-    name: Lint YAML, JSON, and Dockerfile
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Lint YAML and JSON files
+      - name: Lint project files
         uses: github/super-linter@v5
-        with:
-          languages: "YAML,JSON"
-
-      - name: Lint Dockerfile
-        uses: hadolint/hadolint-action@v3.1.0
-        with:
-          dockerfile: Dockerfile
-          failure-threshold: warning
